# tree-sitter-cfml

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  LIMITATIONS.md  Makefile  Package.swift  README.md  SECURITY.md  binding.gyp  eslint.config.mjs  flake.nix  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-cfml.wasm  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  release.yml
.kiro/: context.md
.zed/: settings.json
bindings/c/: tree-sitter-cfhtml.pc.in  tree-sitter-cfml.pc.in  tree-sitter-cfquery.pc.in  tree-sitter-cfscript.h  tree-sitter-cfscript.pc.in
bindings/c/tree_sitter/: tree-sitter-cfml.h
bindings/go/: binding.go  binding_cfscript.go  binding_test.go  cfhtml.go  cfml.go  cfquery.go  cfscript.go  go.mod
bindings/node/: binding.cc  binding_test.js  cfhtml.js  cfml.js  cfquery.js  cfscript.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cfml/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterCfml/: cfml.h
bindings/swift/TreeSitterCfmlTests/: TreeSitterCfmlTests.swift
bindings/swift/TreeSitterHTML/: html.h
cfhtml/: Makefile  grammar.js  package-lock.json  package.json  tree-sitter-cfhtml.wasm
cfhtml/parser.dylib.dSYM/Contents/Resources/Relocations/aarch64/: parser.dylib.yml
cfhtml/queries/: highlights.scm  indents.scm  injections.scm  tags.scm
cfhtml/src/: grammar.json  node-types.json  scanner.c
cfhtml/test/corpus/: cfhtml.txt
cfhtml/test/highlight/: cfml.cfm
cfml/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  setup.py  tree-sitter-cfml.wasm
cfml/bindings/c/: tree-sitter-cfml.pc.in
cfml/bindings/go/: binding_test.go
cfml/bindings/rust/: build.rs  lib.rs
cfml/queries/: brackets-zed.scm  folds.scm  highlights.scm  indents-zed.scm  indents.scm  injections.scm  outline.scm  overrides.scm  tags.scm  textobjects.scm
cfml/src/: grammar.json  node-types.json  scanner.c  tag.c  tag.h
cfml/test/corpus/: cdata.txt  cf_body_tags.txt  cfhtml.txt  cfif_tag_attributes.txt  cfml.txt  cfoutput_script.txt  test.cfm
cfquery/: Makefile  grammar.js  package.json
cfquery/queries/: folds.scm  highlights.scm  indents-zed.scm  indents.scm  outline.scm  overrides.scm  tags.scm  textobjects.scm
cfquery/src/: grammar.json  node-types.json  parser.c  scanner.c
cfquery/test/corpus/: cfquery.txt
cfscript/: Makefile  grammar.js  package.json  tree-sitter-cfscript.wasm
cfscript/parser.dylib.dSYM/Contents/: Info.plist
cfscript/parser.dylib.dSYM/Contents/Resources/Relocations/aarch64/: parser.dylib.yml
cfscript/queries/: brackets-zed.scm  folds.scm  highlights.scm  indents-zed.scm  indents.scm  injections.scm  lucee-builtin-functions.txt  lucee-builtin-pattern.txt  outline.scm  overrides.scm  tags.scm  textobjects.scm
cfscript/src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
cfscript/test/corpus/: cfscript.txt
common/: common.mak  define-grammar.js  scanner.h  script-mixin.js  tag.h
docs/: cfml_parser_enhancements.md  index.html  playground.js  tree-sitter-cfhtml.wasm  tree-sitter-cfml.wasm  tree-sitter-cfquery.wasm  tree-sitter-cfscript.wasm  tree-sitter.js  tree-sitter.wasm  web-tree-sitter.js
highlight/: cfml.cfc
metadata/: vendor_support.json
queries/: injections.scm
scripts/: build.js  docswasm.js  ensure-tree-sitter-cli-binary.js  parse.js  playground.js  prestart-wasm.js  release.js  run-tests-msvc.cjs  scan.js  start-playground.js  test.js  tree-sitter-cli.cjs
src/: grammar.json  node-types.json  output.wasm  parser.c  scanner.c  tag.h
test/corpus/: cfml.txt
test/highlight/: attributes.cfm
