[package]
name = "tree-sitter-cfml"
description = "cfml grammar for tree-sitter"
version = "0.26.7"
authors = [
  "Gareth Edwards <ghedwards@gmail.com>",
  "Gavin Baumanis <gavinbaumanis@gmail.com>"
]
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "cfml", "cfc", "cfs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/cfmleditor/tree-sitter-cfml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "cfml/grammar.js",
  "cfml/src",
  "cfhtml/grammar.js",
  "cfhtml/src",
  "cfscript/grammar.js",
  "cfscript/src",
  "cfquery/grammar.js",
  "cfquery/src",
  "queries",
  "tree-sitter.json"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
